--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
-			<scope>3.3.2</scope>
+			<version>3.3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
